Fixed background not covering all the way to footer when there is overflow #2

--- a/server/public/scss/styles.scss
+++ b/server/public/scss/styles.scss
@@ -41,16 +41,19 @@ a {
 }
 
 #root {
+  height: 100%;
   background-image: url(./images/colloseum_color.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+  overflow: scroll;
 }
 
 .main-container {
-  flex-direction: column;
   display: flex;
+  flex-direction: column;
   height: 100%;
+  overflow: scroll;
 }
 
 
